# Emu6502

./: .gitignore  CMakeLists.txt
src/: CMakeLists.txt
src/Emu/: CMakeLists.txt  CPU.hpp  includes.hpp
src/Emu/Emu/: CPU.hpp  Emu.cpp  Memory.hpp  includes.hpp
src/Sandbox/: CMakeLists.txt  main.cpp
test/: CMakeLists.txt
test/Emu.UnitTests/: CMakeLists.txt
test/Emu.UnitTests/Emu.UnitTests/: CPUFixture.hpp  CPUTests.cpp  LDATests.cpp  LDA_ABSX_Tests.cpp  LDA_ABSY_Tests.cpp  LDA_ABS_Tests.cpp  LDA_IM_Tests.cpp  LDA_INDX_Tests.cpp  LDA_INDY_Tests.cpp  LDA_ZPX_Tests.cpp  LDA_ZP_Tests.cpp  LDUtils.cpp  LDUtils.hpp  LDXTests.cpp  LDX_IM_Tests.cpp  LDYTests.cpp  main.cpp
test/InstructionTests/: CMakeLists.txt
test/InstructionTests/Emu/UnitTests/: CPUFixture.hpp  CPUTests.cpp  JumpLocationTests.cpp  JumpSubroutineTests.cpp  LDATests.cpp  LDA_ABSX_Tests.cpp  LDA_ABSY_Tests.cpp  LDA_ABS_Tests.cpp  LDA_INDX_Tests.cpp  LDA_INDY_Tests.cpp  LDA_ZPX_Tests.cpp  LDUtils.cpp  LDUtils.hpp  LDXTests.cpp  LDYTests.cpp  LoadRegisterTests.cpp  LogicalTests.cpp  ReturnSubroutineTests.cpp  StackOperationTests.cpp  StoreRegisterTests.cpp
